--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>My Portfolio</title>
+    <title>Krish Maheshwari</title>
     <link rel="stylesheet" href="style.css" />
 </head>
 <body>
@@ -30,7 +30,7 @@
                 <span class="pointer-glow"></span>
             </div>
             <div>
-                <h1>Hello, I'm <span>Krish Maheshwari</span><br />Frontend Developer</h1>
+                <h1>Hello, I'm <span>Krish Maheshwari</span><br />Backend Developer</h1>
                 <p>
                     I build clean and responsive web interfaces with a strong focus on usability,
                     performance, and modern design.
