--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
                     <div class="project-card">
                         <img src="https://images.unsplash.com/photo-1555529669-e69e7aa0ba9a?auto=format&fit=crop&w=1200&q=80" alt="E-commerce project preview" />
                         <div class="project-content">
-                            <h3>E-commerce UI</h3>
+                            <h3>E-commerce Software</h3>
                             <p>Shopping experience with reusable components, cart flow, and product-focused interface.</p>
                             <a href="#">Live Demo</a>
                         </div>
